--- a/VRChat/89/1150689.html
+++ b/VRChat/89/1150689.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "97nSJSKxO+X/S45l5oUb/A8akKX0s9fygCYloEiOePo="></script>
+    "J6JUe2o25+rpbMV61QMw/U/WS07UrwOVCiIJJ0X0Jug="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けヘッドホン「Pastel」ver.1.02","description":"VRChat向けアバターアクセサリーモデル\n「わがみん式ワイヤーメッシュヘッドホン『pastel』」vre.1.02\n\nモデリング、デザイン：明日葉和神(わがみん)　(wagamin)\n\n～本作品について～\nVRChatのモデルにつけるアクセサリーを目的としたヘッドホンです。\nシェーダーや色を替えたりして、自分の個性を出しまくっちゃおう！\n\nヘッドホン左右の大きな穴の底はロゴなどを入れてみると、オシャレ度もアップするかも！\n同梱してるUVを下書きにテクスチャや模様をつけることもできます！\n\n君だけのオリジナルヘッドホンにしちゃおう！\n\n4/9のアップデートで好きな曲を流せるようになったよ！\n入れ方の案内も画像で分かりやすくしてみたから、ぜひともやってみてほしい！\n\n～内容物～\nヘッドホンfbxデータ\nマテリアルファイル\nテクスチャ用UV線図(png)\nread me （この利用規約データです）\n音楽の入れ方のガイド画像二枚\n\n～使用方法～\n１、まずunityでunitypackageをインポートしよう！\n２、それぞれのマテリアルを設定してみよう！\n　　body:プラスチック部分を想定した部品\n　　cushion:耳にあたるクッションの部分\n　　unlit:発光する部分を想定したマテリアル。スタンダードシェーダーなら、emissionにチェックを入れよう！\n　　logo:ロゴを入れることを想定した部分だ。透過テクスチャを使うのもアリ\n　　metalic:金属部分を想定したマテリアル。サイドの網と針金を想定してるよ！\n３、あとは君の好きなアバターにつけてみよう！耳につけてよし！肩にかけても良しだ！チョークール！　　\n\n～使用条件～\n・「自作発言禁止！」\n　いくらテクスチャやシェーダーをいじって、個性を出しても、モデル自体はこの私「わがみん」が作ったものだから、\n　「モデル」の自作発言はやめてね！\n\n・「再配布禁止！」\n　頑張って色んな人に使ってもらえるように頑張るけど、「再配布」みたいなことは絶対にやめてくれ！\n　わがみんが傷つくぞ！\n\n・「改変可！」\n　一応作品例として、事前にデザインしたものがunitypackageに入ってるけど、むしろどんどん見た目を変えてほしい。\n\n・「商業利用可（条件付き）」\n　難しいことは使用前にTwitterのDMで私（@momonoki3000）に直接聞きに来てほしいけど、その前に以下を読んでからね！\n　①このヘッドホンのモデルデータの第三者が販売することを禁止します。\n　②配信活動のモデルに本作品を付属して配信行為、金銭の発生する配信などでの出演を許可します。\n　③本モデル自体の配布は禁止ですが、付属のUV線図を元にしたテクスチャの配布、販売を許可します。\n　④映像作品、ゲームでの使用を許可します。（MODとかに使ってもいいけど誰かに迷惑かけない程度でね！）\n\n～感想や不具合報告をいつでも受け付けてます～","url":"https://booth.pm/ja/items/1150689","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/48892c94-2e85-4a0f-8ceb-b966208fff2f/i/1150689/f14ec19d-45a4-4cb3-b678-aef225ef8002_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="97nSJSKxO+X/S45l5oUb/A8akKX0s9fygCYloEiOePo="></script>
+    nonce="J6JUe2o25+rpbMV61QMw/U/WS07UrwOVCiIJJ0X0Jug="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -438,9 +438,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
