--- a/VRChat/98/1149998.html
+++ b/VRChat/98/1149998.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "NDon4xdzoCsDvwNlipXRI+2ktb895ZmOgOhN6ZWghgQ="></script>
+    "ESj5TNaC4xTCudUMWstX75ZQQK1myEvVWYoUlofdc9Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"竹流式シフォンロリータ","description":"ふんわりしたシルエットとフリルが贅沢な着せ替え用ドレスです。\n\n\n本モデルは主に以下の用途での使用を想定しております。\n\n　・VRアバター利用\n　・Unityゲーム作成\n　・動画、映像作成\n　・静止画作成\n　・Vtuber活動\n\nモデルやテクスチャの改変は自由に行っていただいて構いません。\n\n営利・非営利問わずご利用いただけますが、営利目的・商用利用の場合は改変の有無にかかわらず\nクレジット記載（竹流式シフォンロリータ@airgreennet）が必要です。\n※ご自身に金銭などの報酬が得られる場合はクレジット必要\n\nVRchat内で撮影された動画、スクリーンショットの映り込みに関してはクレジット不要です。\n他者の行っている凸待ち配信などへの参加はクレジット不要です。\n\n\n　●　同梱物一覧　●\n\n・FBXファイル　8個（リーファ用、Grus用、桔梗用、舞夜用）×半袖、長袖\n・テクスチャ　枚（ワンピースカラバリ5枚、靴用マットキャップ、靴用マットキャップマスク）\n・blendファイル　4個（リーファ用、Grus用、桔梗用、舞夜用）\n・改変用psd、clipファイル　各1個（ドレス用）\n・Unitypackage　1個\n\n\n　★　使い方　★\n\n・Unityでアバターと衣装を組み合せる\n下記のアバターに対応したPrefabを用意してあります。\n\n\n【VRC向けアバター】リーファ\nhttps://booth.pm/ja/items/3659436\n\nGrus\nhttps://booth.pm/ja/items/3190100\n\nオリジナル3Dモデル「桔梗」\nhttps://ponderogen.booth.pm/items/3681787\n\nオリジナル3Ｄモデル「舞夜」\nhttps://booth.pm/ja/items/3390957\n\n\n\nなお、上記以外のアバターでも調整いただければ着用可能な場合があります。\n\n\n◆導入手順（2023.1月現在）\n・VRC SDKの最新版（Avatar3.0、PB対応版）をインポートする\n・必要シェーダー（liltoon）をインポートする\n・必要なアセット（Modular Avatar、キセテネなど）をインポートする\n・各アバター本体のデータをインポートする\n・本データのパッケージをインポートする\n・アバター本体のPrefabをHierarchyにドラッグアンドドロップし、不要なパーツを削除あるいは非表示（EditorOnly）にする\n・本データのアバター対応PrefabをHierarchyにドラッグアンドドロップする\n・「Modular Avatar」や「キセテネ」あるいは手動で衣装を着せる\n・VRC SDKからアバターをアップロード\n\n\n　○推奨アセット\n\n★オススメ★\nModular Avatar（本データでは1.3.0を使用）\nマニュアルページ：https://modular-avatar.nadena.dev/ja/docs/intro\n\nVRC/3Dアバター向け簡単着せ替えツール「キセテネ」\nhttps://booth.pm/ja/items/2332420\n\n\n　○必要なシェーダー\n\n本データ用「liltoon」\nhttps://booth.pm/ja/items/3087170\n\n\n・Blender等3Dソフトで組み合せる\nblendファイル、FBXファイルをご利用ください。\n\n\n　★　色変えについて　★\n\n「mate」ファイル内の各カラバリ用マテリアルを差し替えてご利用ください。\n\nカラーバリエーションのデフォルトはグリーンです。\nブルー・ミント・ピンク・ブラック、その他ご自身で改変したカラーリングをご利用になりたい場合は\nマテリアル内のベーステクスチャ、アウトライン用テクスチャを差し替えてご利用ください。\nPSDファイルが扱える画像編集ソフトをご利用いただければレイヤーごとにパーツを別れていますので\nバケツで色を乗せるだけで色変えが可能です。\n\n\n\n2023/1/15　バージョン２アップデート\n\t　 シェーダーをliltoonに変更、PB対応\n\t　 従来方式の素体付きは廃止、各アバターに対応\n2019/8/22　シェーダー設定アップデート\n2018/12/26　リリース","url":"https://booth.pm/ja/items/1149998","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1300"},"image":"https://booth.pximg.net/c/620x620/7dbcb1ac-257b-4189-ab1a-4aa38dcc29f7/i/1149998/eea7749b-a036-4b55-b3e2-132ad81ad3d1_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NDon4xdzoCsDvwNlipXRI+2ktb895ZmOgOhN6ZWghgQ="></script>
+    nonce="ESj5TNaC4xTCudUMWstX75ZQQK1myEvVWYoUlofdc9Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -509,9 +509,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
