--- a/VRChat/61/1149761.html
+++ b/VRChat/61/1149761.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "r3pq9ydM2OqoZBO1xBD+ona1vGnIdJsxjZuIiRlBCpQ="></script>
+    "Tt4xp50aFKeNDiZ0HDqSYzTcZieLG9qxzAdtn6XIWTE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"さわしろちゃんバッジ","description":"ボクセルモデルのさわしろちゃんバッジが登場！\nVRChatでアクセサリーとしてご利用いただけます！\n\n内容物一覧\nさわしろちゃんバッジ大 中 小とテクスチャ\nさわしろちゃんバッジ平らバージョン大 中 小とテクスチャ\n\n利用規約\n著作権はさわしろちゃんにあります。\n\n他モデルにくっつけるための改変\nモデルにくっつけての再配布は有償無償問わず可\n(使う時にここのURLを添えてくれるととっても嬉しい！)\n\n公序良俗に反する事には使わないでね。\n\nさわしろちゃんは本モデル利用を起因とした損失について一切の責任を負いません。\n\n利用規約はユーザーへの通知無く変更される場合があります\n\n不具合がありましたらtwitterのDM等に連絡ください。\n","url":"https://booth.pm/ja/items/1149761","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e30e960d-4f1b-47f5-9ae0-9b9fdb3b8675/i/1149761/f036d2fa-a5dc-4c22-80c1-cb44bd30a208_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="r3pq9ydM2OqoZBO1xBD+ona1vGnIdJsxjZuIiRlBCpQ="></script>
+    nonce="Tt4xp50aFKeNDiZ0HDqSYzTcZieLG9qxzAdtn6XIWTE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -345,9 +345,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
