--- a/VRChat/29/1148829.html
+++ b/VRChat/29/1148829.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "GwKVevdr+E/4CUiOM6i4Mf2XSckW/65YcjbFcPtLXOM="></script>
+    "U0ZvD+pXq3UF0syCvX2k4mg+gsEvUTOlwgTLeIxiWCY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[眼鏡]アンダーリム眼鏡_Sharono(SHG-18-1201_sharono、SHG-21-0102L_sharono)","description":"アンダーリムの眼鏡です。\n\nちょっとリッチな△1980。(軽量版△830)\nSharonoがメインアバターで利用しているものに\nカラーバリエーションを追加しました。\n\n鼻あての裏と、モダン内側にメーカーロゴが・・・\n\nチェーンにはウエイト乗っていないので\n外すほうが簡単です。(バージョンアップ検討中)\n\n\n\n仕様\n　作者：@Sharono_vvv\n　ファイル形式：unitypackage + fbx + png\n　ポリゴン数：通常版1980 (本体1836 + チェーン144)　軽量版 830\n　その他：ボーンあり(つる左右)\n　　　　　つるの長さ調節可能\n　　　　　チェーン取り外し可能\n　テクスチャ：あり(全5色)\n　シェーダー：通常、ケモ版UTS2　軽量版ToonLit\n\n使い方\n　事前に以下をインポート\n　・UTS2.0.x\n　prefabフォルダ内のGlass_Sharono_ColorX.prefabをHierarchyにドロップ\n\n利用にあたって(利用規約)\n\n　〇：商用、非商用問わずご利用ください。\n　〇：改造、別モデルへのパーツ組み込み等はご自由に。\n　×：ただし、販売モデルそのままの状態での転売や他者への配布は禁止とします。\n　不明点ございましたらお問い合わせください。\n\n2019-03-16\n☆ケモ対応版追加しました(Under_Sharono_kemo.zip)☆\nボーン5本仕込んだので大体の顔に合わせられるはず・・・\nボーンで形を調整した後はボーン消しちゃってください。\n\n2019－09－29\n赤いフレームのテクスチャを追加しました。\n\n2021－01－31\n軽量版(SHG-21-0103L_sharono)を追加しました。\nレンズ削除、ポリゴン削減、1マテリアル化版です。","url":"https://booth.pm/ja/items/1148829","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/d84d54f0-8809-4972-baee-3f190b4e9fd3/i/1148829/06ea94d0-d60c-4117-b0f6-3c7e5451794c_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GwKVevdr+E/4CUiOM6i4Mf2XSckW/65YcjbFcPtLXOM="></script>
+    nonce="U0ZvD+pXq3UF0syCvX2k4mg+gsEvUTOlwgTLeIxiWCY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -473,9 +473,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
